[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_predictor"
version = "2.0.0"
description = "Multi-signal stock prediction system — 8 modules + Bayesian aggregation + 5-scenario + 75% confidence cap"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "wonsok.oh", email = "wonsok.oh@navercorp.com" }]

dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pandas-ta>=0.3.14b",
    "statsmodels>=0.14",
    "fredapi>=0.5",
    "cachetools>=5.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "jupyter>=1.0",
]

[project.scripts]
stock-predictor = "src.reporting.cli_dashboard:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
